update overview layout

--- a/app/src/main/res/layout/repo_overview_fragment.xml
+++ b/app/src/main/res/layout/repo_overview_fragment.xml
@@ -65,12 +65,11 @@
           android:id="@+id/forkOf"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:drawablePadding="@dimen/gapLarge"
-          android:fontFamily="sans-serif-medium"
+          android:drawablePadding="24dp"
+          android:paddingLeft="8dp"
           android:gravity="center_vertical|left"
           android:lines="1"
           android:singleLine="true"
-          android:textSize="@dimen/material_drawer_item_profile_text"
           tools:text="Fork of"
           />
 
@@ -89,8 +88,8 @@
           android:id="@+id/createdAt"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:drawablePadding="@dimen/gapLarge"
-          android:fontFamily="sans-serif-medium"
+          android:drawablePadding="24dp"
+          android:paddingLeft="8dp"
           android:gravity="center_vertical|left"
           android:lines="1"
           android:singleLine="true"
