--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -144,9 +144,11 @@
          parent="Base.AppTheme.Welcome"/>
 
   <style name="Base.AppTheme.Welcome">
-    <item name="colorAccent">@color/accent_welcome</item>
-    <item name="android:windowBackground">?attr/colorPrimary</item>
-    <item name="colorButtonNormal">?attr/colorAccent</item>
+    <item name="colorAccent">@color/md_grey_600</item>
+    <item name="colorControlNormal">@color/md_grey_600</item>
+    <item name="colorControlActivated">@color/md_grey_600</item>
+    <item name="colorControlHighlight">@color/md_grey_600</item>
+    <item name="android:windowBackground">@color/md_grey_300</item>
   </style>
 
   <style name="AppTheme.ColoredButton">
