--- a/app/src/github/res/layout-land/activity_welcome.xml
+++ b/app/src/github/res/layout-land/activity_welcome.xml
@@ -8,7 +8,7 @@
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       android:id="@id/toolbar"
-      android:layout_height="240dp"
+      android:layout_height="120dp"
       android:layout_width="match_parent"
       android:background="?colorPrimary"
       app:contentInsetStart="@dimen/second_keyline"
@@ -18,10 +18,10 @@
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_marginTop="100dp"
+      android:layout_marginTop="24dp"
       android:layout_marginLeft="@dimen/gapXLarge"
       android:layout_marginRight="@dimen/gapXLarge"
-      android:layout_marginBottom="80dp"
+      android:layout_marginBottom="32dp"
       android:paddingBottom="0dp"
       >
     <android.support.v7.widget.Toolbar
@@ -37,11 +37,10 @@
         tools:visibility="gone"
         >
       <LinearLayout
-          android:layout_width="match_parent"
+          android:layout_width="360dp"
+          android:layout_gravity="center"
           android:layout_height="match_parent"
           android:id="@+id/loginStart"
-          android:layout_marginTop="?actionBarSize"
-          android:layout_marginBottom="?actionBarSize"
           android:padding="@dimen/gapXLarge"
           android:orientation="vertical"
           >
@@ -78,11 +77,13 @@
           android:clickable="false"
           android:gravity="center"
           android:textColor="@color/md_grey_500"
+          android:text="about gitskarios"
           android:id="@+id/textAboutGitskarios"
-          android:text="about gitskarios"/>
+          />
     </FrameLayout>
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
+        android:layout_gravity="center"
         android:layout_height="match_parent"
         android:visibility="gone"
         tools:visibility="visible"
@@ -91,8 +92,6 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:layout_marginTop="80dp"
-          android:layout_marginBottom="?actionBarSize"
           android:padding="@dimen/gapXLarge"
           android:orientation="vertical"
           android:gravity="center"
@@ -111,7 +110,6 @@
             android:visibility="invisible"
             />
       </LinearLayout>
-
       <Button
           android:layout_width="wrap_content"
           android:layout_height="?actionBarSize"
