--- a/app/src/main/res/layout/content_advanced_login.xml
+++ b/app/src/main/res/layout/content_advanced_login.xml
@@ -4,7 +4,7 @@
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              tools:showIn="@layout/activity_welcome"
+              tools:showIn="@layout/activity_github_login"
               android:paddingTop="20dp"
     >
 
