--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -223,4 +223,9 @@
     <item name="android:clickable">true</item>
     <item name="android:drawablePadding">@dimen/gapMedium</item>
   </style>
+  <style name="AppTheme.AppBarOverlay"
+      parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+  <style name="AppTheme.PopupOverlay"
+      parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
