--- a/app/src/enterprise/res/layout/activity_github_enterprise_login.xml
+++ b/app/src/enterprise/res/layout/activity_github_enterprise_login.xml
@@ -1,45 +1,91 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:padding="@dimen/gapMedium"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.activity.GithubLoginActivity"
     >
-
-  <EditText
-      android:id="@+id/enterpriseUrl"
+  <android.support.v7.widget.Toolbar
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      android:id="@id/toolbar"
+      android:layout_height="240dp"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:hint="URL"
+      android:background="?colorPrimary"
+      app:contentInsetStart="@dimen/second_keyline"
+      app:theme="@style/Toolbar.AppCompat.Responsive"
+      app:popupTheme="@style/Toolbar.Popup.AppCompat"
       />
-
-  <Button
-      android:id="@+id/enterpriseGenerateToken"
+  <android.support.v7.widget.CardView
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="GENERATE TOKEN"
-      />
+      android:layout_height="match_parent"
+      android:layout_marginTop="60dp"
+      android:layout_marginLeft="@dimen/gapXLarge"
+      android:layout_marginRight="@dimen/gapXLarge"
+      android:layout_marginBottom="40dp"
+      android:paddingBottom="0dp"
+      >
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:id="@+id/second_toolbar"
+        />
 
-  <EditText
-      android:id="@+id/enterpriseToken"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:hint="TOKEN"
-      />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/loginLayout"
+        >
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="?actionBarSize"
+          android:padding="@dimen/gapXLarge"
+          android:orientation="vertical"
+          android:gravity="center"
+          >
+        <include layout="@layout/content_advanced_login" />
 
-  <Button
-      android:id="@+id/enterpriseLogin"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="LOGIN"
-      />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/login_enterprise_url"
+            android:layout_marginTop="@dimen/gapLarge"
+            android:id="@+id/enterpriseUrl" />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/login_personal_token"
+            android:layout_marginTop="@dimen/gapLarge"
+            android:id="@+id/accessToken"
+            />
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:visibility="invisible"
+            />
+      </LinearLayout>
 
-  <com.alorma.github.ui.view.CircularImageView
-      android:id="@+id/userImage"
-      android:layout_width="140dp"
-      android:layout_height="140dp"
-      android:elevation="4dp"
-      />
+      <Button
+          android:layout_width="wrap_content"
+          android:layout_height="?actionBarSize"
+          android:layout_gravity="bottom|right"
+          android:text="@string/login_button"
+          android:id="@+id/loginGithub"
+          style="@style/Widget.AppCompat.Button.Borderless"
+          />
 
-</LinearLayout>
+      <Button
+          android:layout_width="wrap_content"
+          android:layout_height="?actionBarSize"
+          android:layout_gravity="bottom|left"
+          android:text="@string/generateToken"
+          android:id="@+id/generateToken"
+          style="@style/Widget.AppCompat.Button.Borderless"
+          />
+    </FrameLayout>
+  </android.support.v7.widget.CardView>
+
+</FrameLayout>
