--- a/app/src/main/res/layout-land/profile_activity.xml
+++ b/app/src/main/res/layout-land/profile_activity.xml
@@ -18,16 +18,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:layout_behavior="com.alorma.github.ui.utils.AvatarImageBehavior">
+            app:layout_behavior="com.alorma.github.ui.utils.AvatarImageBehavior"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/gapXLarge"
                 android:fitsSystemWindows="true"
-                android:orientation="vertical"
-                app:layout_collapseMode="parallax">
+                android:orientation="horizontal"
+                app:layout_collapseMode="parallax"
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp">
 
                 <ImageView
                     android:id="@+id/userAvatar"
@@ -37,37 +39,43 @@
                     android:padding="@dimen/gapMicro"
                     tools:src="?colorAccent" />
 
-                <TextView
-                    android:id="@id/userLogin"
-                    style="@style/TextAppearance.AppCompat.Headline"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/gapSmall"
-                    android:gravity="center_horizontal"
-                    android:maxLines="1"
-                    android:textSize="36sp"
-                    tools:text="ALORMA" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/userName"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/gapSmall"
-                    android:gravity="center_horizontal"
-                    android:maxLines="1"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    tools:text="Bernat Borrás Paronella" />
+                    <TextView
+                        android:id="@id/userLogin"
+                        style="@style/TextAppearance.AppCompat.Headline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/gapSmall"
+                        android:gravity="center_horizontal"
+                        android:maxLines="1"
+                        android:textSize="36sp"
+                        tools:text="ALORMA" />
+
+                    <TextView
+                        android:id="@+id/userName"
+                        style="@style/TextAppearance.AppCompat.Subhead"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/gapSmall"
+                        android:gravity="center_horizontal"
+                        android:maxLines="1"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
+                        tools:text="Bernat Borrás Paronella" />
+                </LinearLayout>
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
+                app:layout_collapseMode="pin"
                 app:popupTheme="@style/Toolbar.Popup.AppCompat"
-                app:theme="@style/Toolbar.AppCompat.Responsive.Transparent"
-                app:layout_collapseMode="pin"  />
+                app:theme="@style/Toolbar.AppCompat.Responsive.Transparent" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
         <android.support.design.widget.TabLayout
