--- a/app/src/main/res/layout/user_resume_fragment.xml
+++ b/app/src/main/res/layout/user_resume_fragment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,10 +13,11 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            android:paddingLeft="@dimen/gapLarge"
-            android:paddingRight="@dimen/gapLarge">
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/gapMedium"
+            android:layout_marginBottom="@dimen/gapXLarge"
+            card_view:cardElevation="4dp"
+            tools:layout_height="120dp">
 
             <LinearLayout
                 android:id="@+id/cardAbout"
@@ -27,9 +29,41 @@
                     style="@style/Base.TextAppearance.AppCompat.Subhead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
                     android:fontFamily="sans-serif-light"
                     android:padding="@dimen/gapMedium"
                     android:text="@string/user_resume_about"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/md_grey_300" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/gapMedium"
+            android:layout_marginBottom="@dimen/gapXLarge"
+            card_view:cardElevation="4dp"
+            tools:layout_height="120dp">
+
+            <LinearLayout
+                android:id="@+id/cardGithub"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:fontFamily="sans-serif-light"
+                    android:padding="@dimen/gapMedium"
+                    android:text="@string/user_resume_github"
                     android:textSize="24sp" />
 
                 <View
