--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -130,5 +130,6 @@
   <item name="repo_detail_nav_fragment_members"
         type="id">repo_detail_nav_fragment_members
   </item>
+  <item name="nav_drawer_invite" type="id" />
 
 </resources>
